k8s/staging/app-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    app: frontend
