k8s/staging/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: staging
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lvgr1947/front-end:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
